--- a/about.html
+++ b/about.html
@@ -33,52 +33,63 @@
                     <img src="images/me.png" alt="Kitty IRL in Anime Style" />
                 </div>
             </div>
+
             <div class="about-text">
-                <p>I’m Kitty Crypto, or just Kitty, if we’re past handshakes. I was born in South
-                    America in 1991.</p>
-                <p>In the 2010s, I wandered into the Scottish mist and didn’t wander back. I found a partner, built a
-                    home, and became a mother. My daughter knows her mother debugs TypeScript and cries at Studio
-                    Ghibli films.</p>
-                <p>I studied with physics, then took root in engineering, where
-                    the circuitry made more sense than people ever did. Now I build things..</p>
-                <p>This site is my project dump, my archive of weird ideas and prettier regrets. It’s where TypeScript
-                    meets fanfic. Where chatrooms get cryptographically spicy. Where “what if she” becomes 1,000 lines
-                    of recursive longing.</p>
-                <p>Yes, I like yuri. Yes, anime catgirls do things to me. No, I won’t tone it down for LinkedIn.</p>
-                <p>To everynyan who drifts through here: thank you. May you leave with a spark in your code, a blush you
-                    won’t explain, and the courage to press "merge" on whatever version of yourself you're hiding.</p>
+                <p>I’m Katherine, but nobody calls me that. If you’re here, it’s Kitty.</p>
+                <p>I was born in South America in 1991. In the 2010s I drifted into the Scottish mist and, somehow,
+                    stayed.</p>
+                <p>I found my person, built a home, and became a mum. My daughter already knows two facts about me. I
+                    debug
+                    TypeScript for fun, and I cry at Studio Ghibli films without shame.</p>
+                <p>I started in physics, chasing clean answers in messy skies, then settled into engineering, where
+                    circuits
+                    feel honest even when life isn’t. Now I build things, break them, and build them again.</p>
+                <p>This site is my workshop and my scrapbook. It’s where TypeScript meets fanfic, where chatrooms get
+                    cryptographically spicy, and where “what if she…” turns into a thousand lines of recursive yearning.
+                </p>
+                <p>Yes, I like yuri. Yes, anime catgirls do things to my brain. No, I’m not sanding it down for
+                    LinkedIn.</p>
+                <p>To everynyan who wanders through. Thanks for stopping by. May you leave with a spark in your code, a
+                    blush
+                    you won’t explain, and the nerve to press “merge” on the version of yourself you’ve been postponing.
+                </p>
             </div>
+
             <div class="jp-about">
                 ::tg::
-                <p>ベネズエラで一九九一年に生まれた、</p>
-                <p>少女の身体に囚われた猫耳、感情とログでできた存在。</p>
-                <p>ソナタ・アークティカ、カメロット、エヴァネッセンス、</p>
-                <p>パラモア、ブレット・フォー・マイ・ヴァレンタイン、</p>
-                <p>フューネラル・フォー・ア・フレンド、アーク・エネミー、</p>
-                <p>ウィンターサン、ラプソディー・オブ・ファイア——</p>
-                <p>私の中には、交響的な混乱がいつも鳴り響いています。</p>
-                <p>二千十年代、スコットランドの霧に包まれながら、</p>
-                <p>帰らない旅に出ました。</p>
-                <p>そこで伴侶に出会い、家庭を築き、</p>
-                <p>母になりました。</p>
-                <p>娘はすでに、ママがバグを直して</p>
-                <p>ジブリ映画で泣けることを知っています。</p>
-                <p>物理学で星に答えを求め、</p>
-                <p>やがて工学に落ち着いた私。</p>
-                <p>今は電子回路と心の配線を</p>
-                <p>同じ手でつなげています。</p>
-                <p>このサイトは、コードと願いが混ざる場所。</p>
-                <p>TSで綴る詩、暗号で守る想い、</p>
-                <p>「もし彼女が…」が千行の再帰になる空間です。</p>
-                <p>はい、百合が好きです。</p>
-                <p>はい、猫耳少女は理性に刺さります。</p>
-                <p>いいえ、リンクトイン用に抑える気はありません。</p>
-                <p>訪れてくれたみニャさん、ありがとう。</p>
-                <p>この旅が、コードの閃きと、説明できないときめき、</p>
-                <p>そして“マージ”する勇気に満ちていますように。</p>
-                <p>ようこそ、私の世界へ。</p>
+                <p>本名はキャサリン。でも、そう呼ぶ人はいません。</p>
+                <p>ここではみんな、私のことを「キティ」と呼びます。</p>
+
+                <p>一九九一年、南米に生まれました。</p>
+                <p>二千十年代、スコットランドの霧へ漂い込みました。</p>
+                <p>そして気づけば、なぜかそのまま住み着いていました。</p>
+
+                <p>そこで伴侶に出会い、家庭を築き、母になりました。</p>
+                <p>娘はもう知っています。ママはTSのバグが好きなこと。</p>
+                <p>それから、ジブリ映画では遠慮なく泣いてしまうことも。</p>
+
+                <p>最初は物理学でした。空の答えを追いかけていました。</p>
+                <p>きれいな式に救いを求めて、息を整えていた時期です。</p>
+
+                <p>でも最後は工学に落ち着きました。回路は正直だから。</p>
+                <p>気まぐれな心よりも、ずっと筋が通っている気がして。</p>
+
+                <p>いまの私は、作っては壊し、また作る人です。</p>
+                <p>このサイトは作業場であり、スクラップブックでもあります。</p>
+
+                <p>TSと二次創作が出会い、チャットは暗号で少し刺激的に。</p>
+                <p>「もし彼女が｡｡｡」が、千行の再帰的な想いへ変わる場所。</p>
+
+                <p>はい、百合が好きです。正直に言います。</p>
+                <p>はい、猫耳少女は理性に刺さります。困るほどに。</p>
+                <p>いいえ、リンクトイン向けに丸くする気はありません。</p>
+
+                <p>訪れてくれたみニャさん、ありがとう。本当に。</p>
+                <p>ここを出るとき、コードに火花が残りますように。</p>
+                <p>説明できないときめきと、「マージ」する勇気も残りますように。</p>
                 ::/tg::
             </div>
+
             <div class="twitter-link">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 248 204" width="24" height="24" aria-hidden="true"
                     focusable="false">
@@ -89,6 +100,7 @@
                     (desperately) about girls, code, and Hatsune Miku like she personally saved my life.</a>
                 <img src="./images/miku.svg" width="24" height="24" alt="Miku" class="miku-icon">
             </div>
+
             <footer id="main-footer"></footer>
         </div>
     </div>
