--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
-    <meta name="description" content="KittyCrypto.gg is the personal blog of Kitty, an engineer sharing stories, programming, crypto insights, and creative projects. Not affiliated with CryptoKitties." />
+    <meta name="description"
+        content="KittyCrypto.gg is the personal blog of Kitty, an engineer sharing stories, programming, crypto insights, and creative projects. Not affiliated with CryptoKitties." />
     <title>Kitty's Page</title>
     <link id="theme-stylesheet" rel="stylesheet" href="styles.css">
 
     <script type="application/ld+json">
         {
-          "@context": "https://schema.org",
-          "@type": "Person",
-          "name": "KittyCrypto",
-          "alternateName": [
-            "Kitty Crypto",
-            "KittyCrypto.gg",
-            "Kitty Crypto GG",
-            "Kitty Crypro"
-          ],
-          "url": "https://kittycrypto.gg",
-          "description": "KittyCrypto is the personal blog and online home of Kitty, sharing stories, ideas, and technical projects. This site is not affiliated with CryptoKitties, NFTs, or any related schemes."
+            "@context": "https://schema.org",
+            "@type": "Person",
+            "name": "KittyCrypto",
+            "alternateName": [
+                "Kitty Crypto",
+                "KittyCrypto.gg",
+                "Kitty Crypto GG",
+                "Kitty Crypro"
+            ],
+            "url": "https://kittycrypto.gg",
+            "description": "KittyCrypto is the personal blog and online home of Kitty, sharing stories, ideas, and technical projects. This site is not affiliated with CryptoKitties, NFTs, or any related schemes."
         }
     </script>
 
@@ -36,7 +37,7 @@
 <body>
     <div class="frame">
         <div class="frame-content">
-            <aside id="shell-wrapper" role="presentation" aria-hidden="true", style="width: auto;">
+            <aside id="shell-wrapper" role="presentation" aria-hidden="true" , style="width: auto;">
                 <img id="term-icon" />
                 <div id="terminal-wrapper">
                     <div id="terminal-loading">Loading terminal...</div>
@@ -58,28 +59,22 @@
                         </span>
                     </p>
                     <p>
-                        Nyaa~ this site’s still a little under construction, onee-chan
-                        But that doesn’t mean you can’t poke around... I’m hand-coding everything from scratch — no
-                        frameworks, no filters — just raw JavaScript and quiet devotion.
+                        Nyaa~ This site is a live system in construction. It boots, it crashes and then comes back with
+                        scars.
                     </p>
                     <p>
-                        I write at night, with the soft glow of my terminal lighting the room. She’s not fully awake
-                        yet, but her logic’s already purring. She only listens to cryptographic proof… and sometimes to
-                        whispers. If you like your interfaces minimal, honest, and just a bit feral… then welcome home,
-                        nya
+                        Expect terminal windows, strange little tools, and notes that look like they were written
+                        at 03:00 with shaking hands. Expect love letters hidden in plain sight, commented out where
+                        only the right kind of girl will notice. If you’re the sort who reads config files like
+                        diaries, welcome home, nya~
                         <span class="emoticons">
                             <span class="emoticon">(=^uᄌu^=)</span>
                         </span>
                     </p>
                     <p>
-                        This isn’t just a site. It’s a shrine — sapphic, sacred, and slightly cursed — dedicated to
-                        catgirls, clean code, and quiet longing between the lines.
-                    </p>
-                    <p>
-                        The code? Open source. Fork her, explore her modules, let her surprise you — she’s all MIT
-                        licensed
-                        But the stories? Those are personal. Not for redistribution without care. If something here
-                        lingers in your mind and you want to share it...
+                        The code is open source. Fork it, patch it, break it, send a PR if you’re brave. It’s MIT
+                        and I mean it. The writing is mine though. If something here gets under
+                        your skin and you want to share it, do it gently, or better… just tell me what you felt.
                         <a href="mailto:kitty@kittycrypto.gg">meow me directly~</a>
                         <span class="emoticons">
                             <span class="emoticon">(=^-ω-^=)</span>
@@ -97,8 +92,10 @@
                     <a href="mailto:kitty@kittycrypto.gg">Email me!</a>
                     </p>
                 </div>
+
                 <div class="blog-wrapper">
-                    <a class="comments-header" href="./blog.html" style="display: block; text-align: left;">Blog Posts</a>
+                    <a class="comments-header" href="./blog.html" style="display: block; text-align: left;">Blog
+                        Posts</a>
                     <div class="blog-container"></div>
                 </div>
                 <div class="commits-outer-container">
@@ -109,7 +106,7 @@
                         <div class="commits-row">
                             <div class="commits-container">
                                 <a class="comments-header" href="https://github.com/kittyCrypto-gg/kittycrypto"
-                                    target="_blank" rel="noopener noreferrer"> 
+                                    target="_blank" rel="noopener noreferrer">
                                     Front-end Commits
                                 </a>
                                 <div id="github-commits-frontend" class="github-output-frame"></div>
