--- a/keyboard.html
+++ b/keyboard.html
@@ -5,6 +5,23 @@
 -->
 <span id="keyboard-emu-html-loaded" hidden></span>
 
+<div class="fn-grid-wrap" aria-label="Function keys">
+    <div class="fn-grid">
+        <button type="button" class="fkey plain" data-key="F1" aria-label="F1">F1</button>
+        <button type="button" class="fkey plain" data-key="F2" aria-label="F2">F2</button>
+        <button type="button" class="fkey plain" data-key="F3" aria-label="F3">F3</button>
+        <button type="button" class="fkey plain" data-key="F4" aria-label="F4">F4</button>
+        <button type="button" class="fkey plain" data-key="F5" aria-label="F5">F5</button>
+        <button type="button" class="fkey plain" data-key="F6" aria-label="F6">F6</button>
+        <button type="button" class="fkey plain" data-key="F7" aria-label="F7">F7</button>
+        <button type="button" class="fkey plain" data-key="F8" aria-label="F8">F8</button>
+        <button type="button" class="fkey plain" data-key="F9" aria-label="F9">F9</button>
+        <button type="button" class="fkey plain" data-key="F10" aria-label="F10">F10</button>
+        <button type="button" class="fkey plain" data-key="F11" aria-label="F11">F11</button>
+        <button type="button" class="fkey plain" data-key="F12" aria-label="F12">F12</button>
+    </div>
+</div>
+
 <div class="key-grid" aria-label="Terminal toolbar grid">
     <!-- Row 1 -->
     <button type="button" class="esc-key plain" data-key="Escape" aria-label="Escape">Esc</button>
