Migrate to TypeScript build
Add a TypeScript build setup and move front-end artifacts into a dist output. Added package.json and tsconfig.json to enable tsc builds and added src/*.ts sources (avatar.ts, banner.ts). Removed legacy scripts/avatar.js and converted banner.js → src/banner.ts with TypeScript typings and small refactors (better DOM typing, helper ignore, promises, and minor logic/formatting improvements). Renamed many runtime JS files from scripts/ → dist/ and updated HTML files (index, about, blog, chat, reader, termtest) to load from ./dist. Updated .gitignore to include dependencies, public/build folders and legacy entries. These changes prepare the repo for compiling TypeScript into dist and ensure pages reference the built output.

--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <script src="./scripts/themeLoad.js"></script>
-    <script type="module" src="./scripts/main.js"></script>
-    <script type="module" src="./scripts/tategaki.js"></script>
+    <script src="./dist/themeLoad.js"></script>
+    <script type="module" src="./dist/main.js"></script>
+    <script type="module" src="./dist/tategaki.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
