--- a/chat.html
+++ b/chat.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <script src="./scripts/themeLoad.js"></script>
-    <script type="module" src="./scripts/main.js"></script>
-    <script type="module" src="./scripts/chat.js"></script>
-    <script type="module" src="./scripts/message.js"></script>
+    <script src="./dist/themeLoad.js"></script>
+    <script type="module" src="./dist/main.js"></script>
+    <script type="module" src="./dist/chat.js"></script>
+    <script type="module" src="./dist/message.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kitty Crypto Chat</title>
