--- a/reader.html
+++ b/reader.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="./scripts/themeLoad.js"></script>
-    <script type="module" src="./scripts/main.js"></script>
-    <script type="module" src="./scripts/reader.js"></script>
-    <script type="module" src="./scripts/readAloud.js"></script>
-    <script type="module" src="./scripts/comments.js"></script>
+    <script src="./dist/themeLoad.js"></script>
+    <script type="module" src="./dist/main.js"></script>
+    <script type="module" src="./dist/reader.js"></script>
+    <script type="module" src="./dist/readAloud.js"></script>
+    <script type="module" src="./dist/comments.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kitty Crypto Reader</title>
