--- a/termtest.html
+++ b/termtest.html
@@ -56,7 +56,7 @@
 
     <!-- Load terminal logic -->
     <script type="module">
-        import { setupTerminalWindow } from "./scripts/terminal.js";
+        import { setupTerminalWindow } from "./dist/terminal.js";
 
         setupTerminalWindow().catch(err => {
             console.error("Terminal initialisation failed:", err);
