--- a/blog.html
+++ b/blog.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="./scripts/themeLoad.js"></script>
-    <script type="module" src="./scripts/main.js"></script>
-    <script type="module" src="./scripts/rss.js"></script>
+    <script src="./dist/themeLoad.js"></script>
+    <script type="module" src="./dist/main.js"></script>
+    <script type="module" src="./dist/rss.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
