--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="module" src="./dist/github.js"></script>
     <script type="module" src="./dist/rss.js"></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta property="og:type" content="website">
     <meta name="description"
         content="KittyCrypto.gg is the personal blog of Kitty, an engineer sharing stories, programming, crypto insights, and creative projects. Not affiliated with CryptoKitties." />
