--- a/chat.html
+++ b/chat.html
@@ -7,7 +7,7 @@
     <script type="module" src="./dist/chat.js"></script>
     <script type="module" src="./dist/message.js"></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Kitty Crypto Chat</title>
     <link id="theme-stylesheet" rel="stylesheet" href="styles.css">
 
