--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <script type="module" src="./dist/main.js"></script>
     <script type="module" src="./dist/tategaki.js"></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta property="og:type" content="website">
     <title>Kitty Crypto's Page</title>
     <link id="theme-stylesheet" rel="stylesheet" href="styles.css">
