--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <script type="module" src="./dist/main.js"></script>
     <script type="module" src="./dist/rss.js"></script>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta property="og:type" content="website">
     <title>Kitty Crypto Blog</title>
     <link id="theme-stylesheet" rel="stylesheet" href="styles.css">
