Restructure styles directory and update refs
Move and modularise stylesheet assets into styles/core and styles/modules, add global tokens and utility CSS, and relocate themes.json to data/themes.json. Update HTML to use the absolute /styles/styles.css path and adjust TypeScript references to new module stylesheet paths (keyboard, sms, email, physics). Also include small formatting fix in shodou.ts. This reorganizes CSS for clearer theming and module separation and updates all runtime references accordingly.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta property="og:type" content="website">
     <meta name="description"
-        content="KittyCrypto.gg is the personal blog of Kitty, an engineer sharing stories, programming, crypto insights, and creative projects. Not affiliated with CryptoKitties." />
+        content="KittyCrypto.gg is the personal blog of Kitty, an engineer sharing stories, programming, and creative projects. Not affiliated with CryptoKitties." />
     <title>Kitty's Page</title>
-    <link id="theme-stylesheet" rel="stylesheet" href="styles.css">
+    <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css">
 
     <script type="application/ld+json">
         {
