--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta property="og:type" content="website">
     <title>Kitty Crypto Blog</title>
-    <link id="theme-stylesheet" rel="stylesheet" href="styles.css">
+    <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css">
   </head>
   <body>
     <div class="frame">
