--- a/chat.html
+++ b/chat.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Kitty Crypto Chat</title>
-    <link id="theme-stylesheet" rel="stylesheet" href="styles.css">
+    <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css">
 
 </head>
 
