--- a/blog.html
+++ b/blog.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
     <script src="./dist/themeLoad.js"></script>
     <script type="module" src="./dist/main.js"></script>
     <script type="module" src="./dist/rss.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <meta property="og:type" content="website">
     <title>Kitty Crypto Blog</title>
-    <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css">
+    <!-- <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css"> -->
   </head>
   <body>
     <div class="frame">
