--- a/reader.html
+++ b/reader.html
@@ -6,10 +6,8 @@
     <script type="module" src="./dist/reader.js"></script>
     <script type="module" src="./dist/readAloud.js"></script>
     <script type="module" src="./dist/comments.js"></script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Kitty Crypto Reader</title>
-    <link rel="stylesheet" href="/styles/styles.css" />
+    <!-- <link rel="stylesheet" href="/styles/styles.css" /> -->
   </head>
   <body>
     <div class="frame">
