Enable theme stylesheet & loader
Restore the theme stylesheet link across pages (about.html, blog.html, chat.html, index.html, reader.html) so /styles/styles.css is actually loaded, and add a themeLoad.js script to editMessage.html to ensure the theme is initialized on the edit page. This re-enables site styling and theme initialization that had been commented out or missing.

--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> -->
     <script src="./dist/themeLoad.js"></script>
     <script type="module" src="./dist/main.js"></script>
     <script type="module" src="./dist/rss.js"></script>
     <title>Kitty Crypto Blog</title>
-    <!-- <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css"> -->
+    <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css">
   </head>
   <body>
     <div class="frame">
