--- a/editMessage.html
+++ b/editMessage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="themeLoad.js"></script>
     <title>Edit Message</title>
 </head>
 <body>
