--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="description"
         content="KittyCrypto.gg is the personal blog of Kitty, an engineer sharing stories, programming, and creative projects. Not affiliated with CryptoKitties." />
     <title>Kitty's Page</title>
+    <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css">
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
