--- a/reader.html
+++ b/reader.html
@@ -7,7 +7,7 @@
     <script type="module" src="./dist/readAloud.js"></script>
     <script type="module" src="./dist/comments.js"></script>
     <title>Kitty Crypto Reader</title>
-    <!-- <link rel="stylesheet" href="/styles/styles.css" /> -->
+    <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body>
     <div class="frame">
