--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <script type="module" src="./dist/main.js"></script>
     <script type="module" src="./dist/tategaki.js"></script>
     <title>Kitty Crypto's Page</title>
-    <!-- <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css"> -->
+    <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
