--- a/chat.html
+++ b/chat.html
@@ -7,8 +7,7 @@
     <script type="module" src="./dist/chat.js"></script>
     <script type="module" src="./dist/message.js"></script>
     <title>Kitty Crypto Chat</title>
-    <!-- <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css"> -->
-
+    <link id="theme-stylesheet" rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body>
