--- a/blog.html
+++ b/blog.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <script src="./dist/themeLoad.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script type="module" src="./dist/main.js"></script>
     <script type="module" src="./dist/rss.js"></script>
     <title>Kitty Crypto Blog</title>
