!feat 88x31 badges support
Add a new SVG logo (images/kittycrypto-gg.svg) and accompanying 88x31 stylesheet (styles/modules/88by31.css).

Update index.html and src/main.ts to reference/handle the new asset, and apply styling tweaks in styles/modules/commits.css and styles/styles.css to accommodate the new branding and layout adjustments.

--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
                 <div class="pfp">
                     <img src="images/kitty.jpg" alt="Kitty Crypto" />
                 </div>
-                <div class="irl-pic">
+                <!--<div class="irl-pic">
                     <img src="images/me.png" alt="Kitty IRL in Anime Style" />
-                </div>
+                </div>-->
             </div>
 
             <div class="about-text">
