--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                         The code is open source. Fork it, patch it, break it, send a PR if you’re brave. It’s MIT
                         and I mean it. The writing is mine though. If something here gets under
                         your skin and you want to share it, do it gently, or better… just tell me what you felt.
-                        <a href="mailto:kitty@kittycrypto.gg">meow me directly~</a>
+                        <a href="/cdn-cgi/l/email-protection#6803011c1c112803011c1c110b1a11181c07460f0f">meow me
+                            directly~</a>
                         <span class="emoticons">
                             <span class="emoticon">(=^-ω-^=)</span>
                         </span>
@@ -84,8 +85,10 @@
                         </span>
                     </p>
                     </p>
-                    ~Kitty 🧶 <code>kitty@kittycrypto.gg</code> –
-                    <a href="mailto:kitty@kittycrypto.gg">Email me!</a>
+                    ~Kitty 🧶
+                    <code><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="375c5e43434e775c5e43434e54454e474358195050">[email&#160;protected]</a></code>
+                    –
+                    <a href="/cdn-cgi/l/email-protection#91faf8e5e5e8d1faf8e5e5e8f2e3e8e1e5febff6f6">Email me!</a>
                     </p>
                 </div>
 
@@ -101,20 +104,62 @@
                     <div class="commits-wrapper">
                         <div class="commits-row">
                             <div class="commits-container">
-                                <a class="comments-header" href="https://github.com/kittyCrypto-gg/kittycrypto"
+                                <a class="comments-header" href="https://github.com/kittyCrypto-gg/website"
                                     target="_blank" rel="noopener noreferrer">
                                     Front-end Commits
                                 </a>
                                 <div id="github-commits-frontend" class="github-output-frame"></div>
                             </div>
                             <div class="commits-container">
-                                <a class="comments-header" href="https://github.com/kittyCrypto-gg/kittyServer"
+                                <a class="comments-header" href="https://github.com/kittyCrypto-gg/server"
                                     target="_blank" rel="noopener noreferrer">
                                     Back-end Commits
                                 </a>
                                 <div id="github-commits-backend" class="github-output-frame"></div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="kc-88by31">
+                <div class="comments-header">Sites I find Interesting</div>
+                <div class="kc-88by31__inner">
+                    <div id="kc-88by31-grid" class="kc-88by31__grid">
+                        <a href="https://lyra.horse" target="_blank" rel="noopener noreferrer">
+                            <img src="https://lyra.horse/badges/lyra.horse.png" width="88" height="31"
+                                alt="lyra.horse badge">
+                        </a>
+                        <a href="https://angs-corner.neocities.org" target="_blank" rel="noopener noreferrer">
+                            <img src="https://petrapixel.neocities.org/assets/img/links/websites/angs-corner.gif"
+                                width="88" height="31" alt="Ang's Corner badge">
+                        </a>
+                        <a href="https://slushiecafe.neocities.org" target="_blank" rel="noopener noreferrer">
+                            <img src="https://slushiecafe.neocities.org/images/slushiecafebutton.gif" width="88"
+                                height="31" alt="Slushie Cafe badge">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="kc-88by31">
+                <div class="comments-header">My Button</div>
+
+                <div class="kc-88by31__inner">
+                    <div id="kc-88by31-grid" class="kc-88by31__grid">
+                        <img id="kittyBadge" src="https://srv.kittycrypto.gg/img?src=https%3A%2F%2Fkittycrypto.gg%2Fimages%2Fkittycrypto-gg.svg&amp;format=png&amp;width=720" width="88" height="31" alt="88x31 badge">
+                    </div>
+
+                    <div class="kc-badge-snippet">
+                        
+
+                        <textarea id="kittyBadgeSnippet" class="kc-badge-snippet__textarea" readonly="" rows="4" spellcheck="false" style="height: 102px;">&lt;a href="https://kittycrypto.gg" target="_blank" rel="noopener noreferrer"&gt;
+  &lt;img id="kittyCrypto_badge"
+    src="https://srv.kittycrypto.gg/img?src=https%3A%2F%2Fkittycrypto.gg%2Fimages%2Fkittycrypto-gg.svg&amp;amp;format=png&amp;amp;width=720"
+    width="88" height="31" alt="kittycrypto.gg"&gt;
+&lt;/a&gt;</textarea>
+
+                        <button id="kittyBadgeSnippetCopy" class="kc-badge-snippet__copy" type="button">
+                            Copy snippet
+                        </button>
                     </div>
                 </div>
             </div>
@@ -131,8 +176,15 @@
                     <button id="post-comment-button">Post</button>
                 </div>
             </div>
-            <footer id="main-footer"></footer>
         </div>
+        <footer id="main-footer"></footer>
+    </div>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script defer
+        src="https://static.cloudflareinsights.com/beacon.min.js/v67327c56f0bb4ef8b305cae61679db8f1769101564043"
+        integrity="sha512-rdcWY47ByXd76cbCFzznIcEaCN71jqkWBBqlwhF1SY7KubdLKZiEGeP7AyieKZlGP9hbY/MhGrwXzJC/HulNyg=="
+        data-cf-beacon='{"version":"2024.11.0","token":"1b7b82e8fb784f3093eb0c805db0be74","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}'
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
