!skip testing using the actual aspect ratio of the banner

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 <div class="kc-88by31__inner">
                     <div id="kc-88by31-grid" class="kc-88by31__grid">
-                        <img id="kittyBadge" src="https://srv.kittycrypto.gg/img?src=https%3A%2F%2Fkittycrypto.gg%2Fimages%2Fkittycrypto-gg.svg&amp;format=png&amp;width=720" width="88" height="31" alt="88x31 badge">
+                        <img id="kittyBadge" src="https://srv.kittycrypto.gg/img?src=https%3A%2F%2Fkittycrypto.gg%2Fimages%2Fkittycrypto-gg.svg&amp;format=png&amp;width=720" height="31" alt="Kitty's badge">
                     </div>
 
                     <div class="kc-badge-snippet">
