!skip Snippet does not need to change aspect ratio

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <textarea id="kittyBadgeSnippet" class="kc-badge-snippet__textarea" readonly="" rows="4" spellcheck="false" style="height: 102px;">&lt;a href="https://kittycrypto.gg" target="_blank" rel="noopener noreferrer"&gt;
   &lt;img id="kittyCrypto_badge"
     src="https://srv.kittycrypto.gg/img?src=https%3A%2F%2Fkittycrypto.gg%2Fimages%2Fkittycrypto-gg.svg&amp;amp;format=png&amp;amp;width=720"
-    width="88" height="31" alt="kittycrypto.gg"&gt;
+    height="31" alt="kittycrypto.gg"&gt;
 &lt;/a&gt;</textarea>
 
                         <button id="kittyBadgeSnippetCopy" class="kc-badge-snippet__copy" type="button">
